styles/style.css
*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  block-size: 100%;
}

.page {
  display: flex;
  /* justify-content: center; */
  align-items: center;
  margin: auto;
  color: #fff;
  font-family: "Fira Sans Condensed", sans-serif;
  font-size: 18px;
  background-color: #1b1919;

  inline-size: 1200px;
  block-size: 100%;
}

h1,
h2,
h3,
h4,
p,
ul,
ol,
li,
blockquote,
fieldset {
  margin: 0;
  padding: 0;
}

ul,
ol {
  list-style: none;
}

/* Кастомный скроллбар */
.custom-scrollbar::-webkit-scrollbar {
  width: 4px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: rgb(217 217 217 / 10%);
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background-color: #d9d9d9;
}

.content {
  display: grid;
  /* grid-template-columns: 2fr 1fr; */
  grid-template-areas: "result-area details-area";
  justify-self: start;
  column-gap: 30px;
  margin: auto 30px;
}

.button {
  height: 34px;
  border: 1px solid #fff;
  color: #fff;
  font: inherit;
  font-weight: 700;
  font-size: 18px;
  background-color: transparent;
}

.button:focus-visible {
  outline: 1px solid #fff;
  outline-offset: 1px;
}

.button:hover {
  text-decoration: underline;
}

.button:active {
  background-color: #545050;
}

.more-button {
  width: 100%;
  margin-top: 28px;
  margin-bottom: 2px;
}

.search-form__submit-button {
  width: 194px;
  margin-top: 18px;
}

.result {
  grid-area: result-area;
  width: 711px;
  padding: 78px 0px 0px 0px;
}

.content__details {
  display: flex;
  flex-direction: column;
  justify-items: end;
  grid-area: details-area;
  gap: 20px;
}

.result__video-container {
  position: relative;
  height: 386px;
  margin-bottom: 18px;
}

.result__video {
  width: 100%;
  height: 386px;
  object-fit: fill;
  object-position: center;
}

.search-form {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 40px;
  width: 100%;
  margin-top: 2px;
  color: #ffffff;

  font-family: "Fira Sans Condensed", sans-serif;
  font-weight: 400;
  font-size: 18px;
  line-height: 21.6px;
}

.content__accent {
  color: #545050;
}

.title {
  width: 259px;
  height: 210px;
  margin-top: 5px;
  margin-bottom: 0px;
  color: #ffffff;
  font-family: "Oswald", sans-serif;
  font-weight: 700;
  font-size: 75px;
  line-height: 69.5px;
  text-transform: uppercase;
}

.content__list {
  width: 390px; /*399 - 4px widch of scrollbar*/
}

.content__list-container {
  position: relative;
  max-width: 399px;
  max-height: 298px;
  padding: 0 3px;
  overflow-x: hidden;
}

.content__list-item:not(:last-child) {
  margin-bottom: 30px;
}

.content__list-item {
  width: 100%;
  /* padding: 0px 3px 0px; */
  margin-top: 3px;
}

.content__video-card {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: flex-start;
}

.content__video-card:hover {
  text-decoration: underline;
}

.content__list-item:has(:focus-visible) {
  outline: 1px solid #fff;
  outline-offset: 1px;
}

.content__card-link:focus {
  outline: none;
}

.content__video-card-thumbnail {
  box-sizing: border-box;
  width: 194px;
  height: 103px;
  object-fit: cover;
  object-position: center;
}

.content__video-card-description {
  margin-top: 6px;
  color: #ffffff;
  font-family: "Fira Sans Condensed", sans-serif;
  font-weight: 400;
  font-size: 18px;
  font-style: normal;
  line-height: 16.2px;
}

.content__video-card-description-container {
  flex-grow: 1;
}

.content__card-link {
  color: white;
  text-decoration: none;
}

.content__card-link_current .content__video-card {
  background-color: #545050;
}

.content__video-card-title {
  max-width: 196px;
  overflow: hidden;
  color: #ffffff;
  font-family: "Oswald", sans-serif;
  font-weight: 700;
  font-size: 30px;
  line-height: 30px;
  text-transform: uppercase;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.visually-hidden {
  position: absolute;
  overflow: hidden;
  clip: rect(0 0 0 0);
  inline-size: 1px;
  block-size: 1px;
  clip-path: inset(50%);
  white-space: nowrap;
}

.search-form__fieldset {
  border: none;
}

.search-form__checkbox-list {
  display: flex;
  flex-direction: row;
  justify-content: start;
  gap: 15px;
  width: 212px;
  height: 20px;
}

.search-form__fieldset-title + .search-form__checkbox-list {
  margin-top: 5px;
}

.search-form__fieldset-title + .search-form__label {
  margin-top: 3px;
}

.search-form__fieldset-title {
  color: #ffffff;
  font-family: "Fira Sans Condensed", sans-serif;
  font-weight: 400;
  font-size: 18px;
  line-height: 21.6px;
}

.search-form__textfield {
  width: 225px;
  height: 27px;
  border: none;
  border-top: 1px solid white;
  border-bottom: 1px solid white;
  padding: 2.5px 0px;
  color: #ffffff;
  font-family: "Fira Sans Condensed", sans-serif;
  font-weight: 400;
  font-size: 18px;
  line-height: 21.6px;
  background-color: transparent;
  appearance: none;
}

.search-form__label:has(:focus-visible) {
  outline: 1px solid white;
  outline-offset: 1px;
}

.search-form__textfield:focus-visible {
  outline: none;
}

.search-form__textfield:active {
  border: 1px solid white;
}

.search-form__label {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  width: fit-content;
}

/*start new checkbox*/

.search-form__pseudo-checkbox {
  width: 19px;
  height: 19px;
  margin-right: 5px;
  border: 1px solid #fff;
  vertical-align: middle;
  background-color: #000;
}

.search-form__checkbox {
  width: 0px;
  height: 0px;
}

.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
  content: "";
  display: block;
  width: 15px;
  height: 15px;
  margin: 1px;
  background-color: white;
}

.search-form__label:has(.search-form__checkbox:hover) {
  text-decoration: underline;
}
/*end new checkbox*/

